<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="generic_error_header">Something went wrong</string>
    <string name="generic_error_message">Please try again</string>
    <string name="internet_connectivity_error_header">No Internet Connection</string>
    <string name="internet_connectivity_error_message">Please check your Internet connection and try again</string>
    <string name="too_many_attempts_header">Too many attempts</string>
    <string name="login_later_message">Please try to log in later</string>
    <string name="register_again_message">Please try to register again</string>
    <string name="email_exists_header">Email address already taken</string>
    <string name="email_exists_message">This email address has already been registered</string>
    <string name="email_invalid_header">Invalid email address</string>
    <string name="email_invalid_message">Please enter a valid email address</string>
    <string name="invalid_credentials_header">Invalid information</string>
    <string name="invalid_credentials_message">Please verify your details and try again</string>
    <string name="phone_exists_header">Phone number already taken</string>
    <string name="phone_exists_message">The phone number you provided has already been registered. Please try again</string>
    <string name="phone_invalid_format_header">Invalid phone number</string>
    <string name="phone_invalid_format_message">Please enter a valid phone number</string>
    <string name="phone_password_exists_header">Password exists</string>
    <string name="phone_password_exists_message">This account already has a password and email associated. Please login by email.</string>
    <string name="invalid_code_header">Invalid code</string>
    <string name="incorrect_code_header">Incorrect Code</string>
    <string name="wrong_code_message">Please enter a valid code</string>
    <string name="phone_pending_login_header">Code Already Sent</string>
    <string name="phone_pending_login_message">We already sent you a code via SMS. Tap Resend after 10 minutes to get a new one.</string>
    <string name="password_invalid_header">Invalid Password</string>
    <string name="password_invalid_message">Please verify your details and try again</string>
    <string name="phone_budget_exhausted_header">Too many requests</string>
    <string name="phone_budget_exhausted_message">Please try again later.</string>
    <string name="permissions_denied_dialog_settings">Settings</string>
    <string name="camera_not_available">CAMERA NOT AVAILABLE</string>
    <string name="camera_permissions_denied_title">Camera not available</string>
    <string name="camera_permissions_denied_message">To take and send photos, grant permission to access the camera</string>
    <string name="welcome__terms_of_service">BY CONTINUING YOU AGREE TO _TERMS OF USE_.</string>
    <string name="profile__name__guidance__tooshort__title">AT LEAST 2 CHARACTERS</string>
    <string name="profile__email__placeholder">Email</string>
    <string name="profile__password__placeholder">Password</string>
    <string name="profile__password__guidance__tooshort__title">AT LEAST 8 CHARACTERS</string>
    <string name="profile__email__verify__instructions">We sent an email to \n[[%1$s]]. \nFollow the link to verify your address.</string>
    <string name="profile__email__verify__didnt_get">Didn\'t get the message?</string>
    <string name="profile__email__verify__resend">Re-send</string>
    <string name="profile__guidance__invalid_email">The email address you entered is not valid. Please verify and try again</string>
    <string name="new_reg__code_resent">A new code was sent to you via SMS</string>
    <string name="new_reg__email_code_resent">A new code was sent to you via email</string>
    <string name="new_reg__code_resent__call">Stand by for a call</string>
    <string name="new_reg__default_country">de</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="invitation_email__normal_phone_signup_button">Sign up using phone number</string>
    <string name="invitation_email__normal_email_signup_button">Sign up using another email</string>
    <string name="invitation_email__password_placeholder">Password (min %1$s chars.)</string>
    <string name="invitation_email__welcome_header">Hello, %1$s.</string>
    <string name="invitation_email__welcome_message">Choose a password to create your account.</string>
    <string name="invitation__continue_button">Continue</string>
    <string name="invitation_phone__normal_phone_signup_button">Using another phone</string>
    <string name="invitation_phone__normal_email_signup_button">Sign up using email</string>
    <string name="invitation_phone__welcome_header">Hello, %1$s.</string>
    <string name="invitation_phone__welcome_message">You are one step away from creating your account.</string>
    <string name="invitation__phone__failed">Unable to register with this invitation.</string>
    <string name="invitation__email__failed">Unable to register with this invitation.</string>
    <string name="pick_user_search_focus">\u0020 SEARCH</string>
    <string name="pick_user_search_hint">SEARCH</string>
    <string name="pick_user_search__add_to_conversation">\u0020 SEARCH</string>
    <string name="choose_conversation">SEARCH</string>
    <string name="people_picker__top_users_header_title">Top people</string>
    <string name="people_picker__address_book_matches_title">Connect</string>
    <string name="people_picker__search_result_conversations_header_title">Groups</string>
    <string name="people_picker__search_result_team_conversations_header_title">%1$s Groups</string>
    <string name="people_picker__search_result_connections_header_title">Contacts</string>
    <string name="people_picker__search_result_others_header_title">Connect</string>
    <string name="people_picker__search_result_recommended_header_title">Recommended</string>
    <string name="people_picker__search_result_contacts_header_title">Contacts</string>
    <string name="people_picker__search_result_team_members_header_title">Team Members</string>
    <string name="people_picker__invite_header_title">Invite</string>
    <string name="people_picker__confirm_button_title">Create conversation</string>
    <string name="people_picker__confirm_button_title__add_to_conversation">Add People to Group</string>
    <string name="people_picker__confirm_button_title__create_conversation">Create Group</string>
    <string name="people_picker__error_message__no_results">No matching results.</string>
    <string name="people_picker__error_message__no_results__no_shared_contacts">Find people by name or email address</string>
    <string name="people_picker__error_message__no_results__invalid_email__no_shared_contacts">Please enter a valid email address or</string>
    <string name="people_picker__error_message__no_results__shared_contacts__add_to_conversation">Enter a different name.</string>
    <string name="people_picker__error_message__no_results__no_shared_contacts__add_to_conversation">Enter a different name.</string>
    <string name="people_picker__error_message__no_results__send_invite">send\nan invitation</string>
    <string name="people_picker__error_message__no_users_to_add_to_conversation">Everyone you\'re connected to is already in this conversation.</string>
    <string name="people_picker__error_message__no_recommenended_users_found__body__shared_contacts">We couldn\'t find any of your contacts on Wire. Enter a full name or email address.</string>
    <string name="people_picker__toolbar_header__group">Add people</string>
    <string name="people_picker__toolbar_header__one_to_one">Create group</string>
    <string name="people_picker__search_result__expander_title">Show all %1$s ↓</string>
    <string name="people_picker__guest_label">Guest</string>
    <string name="people_picker__search_people">PEOPLE</string>
    <string name="people_picker__search_services">SERVICES</string>
    <string name="integrations_picker__section_title">Services</string>
    <string name="integrations_picker__add">Add Service</string>
    <string name="integrations_conv_bot">Bot</string>
    <string name="integrations_chathead__section_title">Services</string>
    <string name="integrations_errors_add_service">Adding service not possible</string>
    <string name="pref_options_dark_theme_title">Dark theme</string>
    <string name="pref_options_contacts_title">Share Contacts</string>
    <string name="pref_options_contacts_summary">This helps you connect with others. We anonymize all the information and do not share it with anyone else.</string>
    <string name="pref_options_vbr_title">Variable Bit Rate Encoding</string>
    <string name="pref_options_vbr_summary">This makes audio calls use less data and work better on slower networks. Turn off to use Constant Bitrate Encoding.</string>
    <string name="pref_options_alerts_category_title">Alerts</string>
    <string name="pref_options_calls_category_title">Calls</string>
    <string name="pref_options_sounds_title">Sounds</string>
    <string name="pref_options_vibration_title">Vibration</string>
    <string name="pref_options_ringtones_category_title">Sounds</string>
    <string name="pref_options_ringtones_ringtone_title">Ringtone</string>
    <string name="pref_options_ringtones_text_title">Text tone</string>
    <string name="pref_options_ringtones_ping_title">Ping</string>
    <string name="pref_options_image_download_title">Download pictures</string>
    <string name="pref_options_media_category_title">Media</string>
    <string name="pref_options_requested_category_title">By popular demand</string>
    <string name="pref_options_cursor_send_button_title">Send button</string>
    <string name="pref_options_cursor_send_button_summary">Disable to send via the keyboard.</string>
    <string name="pref_devices_current_device_category_title">Current Device</string>
    <string name="pref_devices_other_devices_category_title">Other Devices</string>
    <string name="pref_devices_device_verified">Verified</string>
    <string name="pref_devices_warning_summary">If you don\'t recognize a device above, remove it and reset your password.</string>
    <string name="pref_devices_device_fingerprint_category_title">Key Fingerprint</string>
    <string name="pref_devices_device_fingerprint_summary">Wire gives every device a unique fingerprint. Compare them and verify your devices and conversations.</string>
    <string name="pref_devices_device_actions_category_title">Actions</string>
    <string name="pref_devices_device_reset_session_title">Reset session</string>
    <string name="pref_devices_device_reset_session_summary">If fingerprints don\'t match, reset the session to generate new encryption keys on both sides.</string>
    <string name="pref_devices_device_remove_title">Remove device</string>
    <string name="pref_devices_device_remove_summary">Remove this device if you have stopped using it. You will be logged out of this device immediately.</string>
    <string name="pref_advanced_debug_report_title">Submit debug report</string>
    <string name="pref_advanced_debug_report_summary">This helps Wire Support diagnose problems.</string>
    <string name="pref_advanced_analytics_title">Usage data and crash reports</string>
    <string name="pref_advanced_analytics_summary">Make Wire better by sending anonymous information.</string>
    <string name="pref_advanced_reset_push_title">Reset Push Notifications Token</string>
    <string name="pref_advanced_reset_push_summary">If you experience problems with push notifications, Wire Support may ask you to reset this token.</string>
    <string name="group_name_hint">GROUP NAME</string>
    <string name="allow_guests_toggle_text">Allow guests</string>
    <string name="allow_guests_toggle_info_text">Open this conversation to people outside your team. You can always change it later.</string>
</resources>