<?xml version="1.0" encoding="utf-8"?>
<!--

    Wire
    Copyright (C) 2018 Wire Swiss GmbH

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.waz.zclient.preferences.views.SwitchPreference
                android:id="@+id/preferences_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/pref_options_contacts_title"
                app:subtitle="@string/pref_options_contacts_summary"
                />

            <com.waz.zclient.ui.text.TypefaceTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                android:text="@string/pref_options_calls_category_title"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/wire__padding__16"
                android:paddingEnd="@dimen/wire__padding__16"
                android:textColor="@color/accent_blue"/>

            <com.waz.zclient.preferences.views.SwitchPreference
                android:id="@+id/preferences_vbr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/pref_options_vbr_title"
                app:subtitle="@string/pref_options_vbr_summary"
                />

            <com.waz.zclient.ui.text.TypefaceTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                android:text="@string/pref_options_alerts_category_title"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/wire__padding__16"
                android:paddingEnd="@dimen/wire__padding__16"
                android:textColor="@color/accent_blue"/>

            <com.waz.zclient.preferences.views.TextButton
                android:id="@+id/preferences_sounds"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:title="@string/pref_options_sounds_title"
                />

            <com.waz.zclient.preferences.views.SwitchPreference
                android:id="@+id/preferences_vibration"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:title="@string/pref_options_vibration_title"
                />

            <com.waz.zclient.ui.text.TypefaceTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                android:text="@string/pref_options_ringtones_category_title"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/wire__padding__16"
                android:paddingEnd="@dimen/wire__padding__16"
                android:textColor="@color/accent_blue"/>

            <com.waz.zclient.preferences.views.TextButton
                android:id="@+id/preference_sounds_ringtone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:title="@string/pref_options_ringtones_ringtone_title"
                />

            <com.waz.zclient.preferences.views.TextButton
                android:id="@+id/preference_sounds_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:title="@string/pref_options_ringtones_text_title"
                />

            <com.waz.zclient.preferences.views.TextButton
                android:id="@+id/preference_sounds_ping"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:title="@string/pref_options_ringtones_ping_title"
                />

            <com.waz.zclient.ui.text.TypefaceTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/wire__padding__16"
                android:paddingStart="@dimen/wire__padding__16"
                android:text="@string/pref_options_requested_category_title"
                android:textColor="@color/accent_blue"/>

            <com.waz.zclient.preferences.views.SwitchPreference
                android:id="@+id/preferences_dark_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:title="@string/pref_options_dark_theme_title"
                />

            <com.waz.zclient.preferences.views.SwitchPreference
                android:id="@+id/preferences_send_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:title="@string/pref_options_cursor_send_button_title"
                app:subtitle="@string/pref_options_cursor_send_button_summary"
                />

            <com.waz.zclient.ui.text.TypefaceTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/wire__padding__16"
                android:paddingStart="@dimen/wire__padding__16"
                android:text="@string/pref_options_media_category_title"
                android:textColor="@color/accent_blue"/>

            <com.waz.zclient.preferences.views.SwitchPreference
                android:id="@+id/preferences_options_image_download"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:title="@string/pref_options_image_download_title"
                />

        </LinearLayout>

    </ScrollView>

</merge>
