<?xml version="1.0" encoding="utf-8"?>
<!--

    Wire
    Copyright (C) 2017 Wire Swiss GmbH

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.waz.zclient.pages.main.profile.preferences.views.SwitchPreference
                android:id="@+id/preferences_analytics"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:subtitle="@string/pref_advanced_analytics_summary"
                app:title="@string/pref_advanced_analytics_title"
                />

            <com.waz.zclient.pages.main.profile.preferences.views.TextButton
                android:id="@+id/preferences_debug_report"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:subtitle="@string/pref_advanced_debug_report_summary"
                app:title="@string/pref_advanced_debug_report_title"
                />

            <com.waz.zclient.pages.main.profile.preferences.views.TextButton
                android:id="@+id/preferences_reset_push"
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_button_height"
                app:subtitle="@string/pref_advanced_reset_push_summary"
                app:title="@string/pref_advanced_reset_push_title"
            />

        </LinearLayout>

    </ScrollView>

</merge>
