<?xml version="1.0" encoding="utf-8"?>
<!--

    Wire
    Copyright (C) 2018 Wire Swiss GmbH

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.waz.zclient.ui.text.TypefaceTextView
                android:id="@+id/device_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/wire__padding__16"
                android:paddingEnd="@dimen/wire__padding__16"
                android:textColor="@color/white"
                android:textSize="@dimen/wire__text_size__regular"
                />

            <com.waz.zclient.ui.text.TypefaceTextView
                android:id="@+id/device_detail_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/wire__padding__16"
                android:paddingEnd="@dimen/wire__padding__16"
                android:textColor="@color/white"
                android:textSize="@dimen/wire__text_size__small"
                />

            <com.waz.zclient.ui.text.TypefaceTextView
                android:id="@+id/device_detail_activated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/wire__padding__16"
                android:textColor="@color/light_graphite"
                android:textSize="@dimen/wire__text_size__small"
                />

            <LinearLayout
                android:id="@+id/fingerprint_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.waz.zclient.ui.text.TypefaceTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/preference_button_height"
                    android:text="@string/pref_devices_device_fingerprint_category_title"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/wire__padding__16"
                    android:paddingEnd="@dimen/wire__padding__16"
                    android:textColor="@color/accent_blue"
                />

                <com.waz.zclient.preferences.views.TextButton
                    android:id="@+id/device_detail_fingerprint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                />

                <com.waz.zclient.ui.text.TypefaceTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_devices_device_fingerprint_summary"
                    android:gravity="center_vertical"
                    android:padding="@dimen/wire__padding__16"
                    android:textColor="@color/light_graphite"
                    android:textSize="@dimen/wire__text_size__small"
                />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/device_detail_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.waz.zclient.preferences.views.SwitchPreference
                    android:id="@+id/device_detail_verified"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/pref_devices_device_verified"
                    />

                <com.waz.zclient.ui.text.TypefaceTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/preference_button_height"
                    android:text="@string/pref_devices_device_actions_category_title"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/wire__padding__16"
                    android:paddingEnd="@dimen/wire__padding__16"
                    android:textColor="@color/accent_blue"
                    />

                <com.waz.zclient.preferences.views.TextButton
                    android:id="@+id/device_detail_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/pref_devices_device_reset_session_title"
                    app:subtitle="@string/pref_devices_device_reset_session_summary"
                    android:layout_marginBottom="@dimen/wire__padding__8"
                    />

                <com.waz.zclient.preferences.views.TextButton
                    android:id="@+id/device_detail_remove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/pref_devices_device_remove_title"
                    app:subtitle="@string/pref_devices_device_remove_summary"
                    android:layout_marginBottom="@dimen/wire__padding__8"
                    />
            </LinearLayout>

        </LinearLayout>

</merge>
