<?xml version="1.0" encoding="utf-8"?>
<!--

    Wire
    Copyright (C) 2018 Wire Swiss GmbH

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <com.waz.zclient.common.views.InputBox
        android:id='@+id/input_box'
        android:layout_gravity='center'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hasButton="false"
        app:hint="@string/group_name_hint"
        android:layout_marginTop="@dimen/create_conv_input_margin_top"/>

    <FrameLayout
        android:id="@+id/guest_toggle_row"
        style="?wireBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_item_height"
        android:paddingStart="@dimen/wire__padding__regular"
        android:paddingEnd="@dimen/wire__padding__regular"
        android:visibility="gone">

        <com.waz.zclient.ui.text.TypefaceTextView
            android:id="@+id/allow_guests_title"
            android:text="@string/allow_guests_toggle_text"
            android:layout_gravity="start|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:w_font="@string/wire__typeface__light"
            android:textSize="@dimen/wire__text_size__regular"
            android:textColor="?wirePrimaryTextColor"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/guest_toggle"
            android:layout_gravity="end|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

    <com.waz.zclient.ui.text.TypefaceTextView
        android:id="@+id/guest_toggle_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/wire__padding__regular"
        android:paddingEnd="@dimen/wire__padding__regular"
        android:layout_marginTop="@dimen/wire__padding__regular"
        android:text="@string/allow_guests_toggle_info_text"
        app:w_font="@string/wire__typeface__light"
        android:textSize="@dimen/wire__text_size__small"
        android:textColor="?wireSecondaryTextColor"/>

</LinearLayout>
